Eevee: Object not using SSS renders incorrectly if a SSS node is unconnected #65017

Closed
opened 2019-05-23 07:40:41 +02:00 by Philip Holzmann · 3 comments

System Information
Operating system: Windows 10 64 bit
Graphics card: Nvidia 750 Ti

Blender Version
Broken: 2.80.0-git.a1ad71304c2d-windows64

Short description of error
If a material has a Principled shader with the Subsurface property set non-zero (or the clearcoat property), but is unconnected, then it fails to render correctly.

Exact steps for others to reproduce the error

  1. Open the file: glitch_minimal.blend
  2. Set the bottom viewport to LookDev or Rendered.
  3. The sphere appears black or gray, even though it should have a red material.
  4. In the node tree on the right, set the Subsurface property of the Principled shader to 0 and rotate the viewport (to update it). The material now renders properly, even though no connected nodes have changed.
**System Information** Operating system: Windows 10 64 bit Graphics card: Nvidia 750 Ti **Blender Version** Broken: 2.80.0-git.a1ad71304c2d-windows64 **Short description of error** If a material has a Principled shader with the Subsurface property set non-zero (or the clearcoat property), but is unconnected, then it fails to render correctly. **Exact steps for others to reproduce the error** 1. Open the file: [glitch_minimal.blend](https://archive.blender.org/developer/F7062789/glitch_minimal.blend) 2. Set the bottom viewport to LookDev or Rendered. 3. The sphere appears black or gray, even though it should have a red material. 4. In the node tree on the right, set the Subsurface property of the Principled shader to 0 and rotate the viewport (to update it). The material now renders properly, even though no connected nodes have changed.

Added subscriber: @Foaly

Added subscriber: @Foaly
Clément Foucault was assigned by Brecht Van Lommel 2019-05-29 02:09:59 +02:00

This issue was referenced by f962c701fe

This issue was referenced by f962c701fe5d6fc14956892de58bf4f7d875348d

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#65017
No description provided.