Fix T65017 Eevee: Render error if a SSS node is unconnected